# BYOD

./: .clang-tidy  .gitignore  .gitmodules  AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md  ios_build.sh  mac_builds.sh  plugins.json  validate.sh  win_builds.sh
modules/: CMakeLists.txt
modules/cmake/: AppleLocalNetworkPlist.cmake  ConfigFlags.cmake  FindJaiCompiler.cmake  RuntimeSIMDLib.cmake  WarningFlags.cmake
sim/BigMuff/: BigMuffClip.h  CMakeLists.txt  big_muff_tone.py  muff_pi.cpp
sim/SpringReverb/: CMakeLists.txt  SpringReverb.cpp  SpringReverb.h  main.cpp
src/: BYOD.cpp  BYOD.h  CMakeLists.txt  SystemInfo.h  pch.h  rocket.hpp
src/gui/: BYODPluginEditor.cpp  BYODPluginEditor.h  BoardComponent.cpp  BoardComponent.h  BoardMessageManager.h  BoardViewport.cpp  BoardViewport.h  Cable.h  CableView.cpp  CableView.h  GUIConstants.h  InfoComponent.cpp  InfoComponent.h  InputEditor.h  KnobsComponent.cpp  KnobsComponent.h  Port.cpp  Port.h  ProcessorEditor.cpp  ProcessorEditor.h  TitleBar.cpp  TitleBar.h
src/gui/cables/: CableDrawingHelpers.cpp  CableDrawingHelpers.h  CableView.cpp  CableView.h  CableViewConnectionHelper.cpp  CableViewConnectionHelper.h  CableViewPortLocationHelper.cpp  CableViewPortLocationHelper.h
src/gui/editors/: KnobsComponent.cpp  KnobsComponent.h  Port.cpp  Port.h  ProcessorEditor.cpp  ProcessorEditor.h
src/gui/pedalboard/: BoardComponent.cpp  BoardComponent.h  BoardViewport.cpp  BoardViewport.h  InfoComponent.cpp
src/gui/presets/: PresetSearchWindow.cpp  PresetSearchWindow.h  PresetsComp.cpp  PresetsComp.h  PresetsItem.h  PresetsLoginDialog.cpp  PresetsLoginDialog.h  PresetsSaveDialog.cpp  PresetsSaveDialog.h  PresetsSyncDialog.cpp  PresetsSyncDialog.h  ServerWaitingSpinner.h  WindowInPlugin.h
src/gui/toolbar/: CPUMeter.cpp  CPUMeter.h  GlobalParamControls.cpp  GlobalParamControls.h  SettingsButton.cpp  SettingsButton.h  TextSlider.h  ToolBar.cpp  ToolBar.h  UndoRedoComponent.cpp  UndoRedoComponent.h
src/gui/utils/: BottomBarLNF.h  CPUMeter.h  ErrorMessageView.cpp  ErrorMessageView.h  HostContextProvider.cpp  HostContextProvider.h  LabelWithCentredEditor.h  LevelMeterComponent.cpp  LevelMeterComponent.h  LookAndFeels.cpp  LookAndFeels.h  ModulatableSlider.cpp  ModulatableSlider.h  PowerButton.h  PresetsComp.h  SettingsButton.cpp  SettingsButton.h  TextSlider.cpp  TextSlider.h  TextSliderItem.h
src/headless/: CMakeLists.txt  GuitarMLFilterDesigner.cpp  GuitarMLFilterDesigner.h  PresetResaver.cpp  PresetResaver.h  PresetSaveLoadTime.cpp  PresetSaveLoadTime.h  ScreenshotGenerator.cpp  ScreenshotGenerator.h  main.cpp
src/headless/UnitTests/: PreBufferTest.cpp  UnitTests.h
src/headless/tests/: AmpIRsSaveLoadTest.cpp  BadModulationTest.cpp  ForwardingParamStabilityTest.cpp  NaNResetTest.cpp  ParameterSmoothTest.cpp  PreBufferTest.cpp  PresetSearchTest.cpp  PresetsTest.cpp  ProcessorStoreInfoTest.cpp  RAMUsageTest.cpp  SilenceTest.cpp  StereoTest.cpp  UndoRedoTest.cpp  UnitTests.cpp  UnitTests.h  WaveshaperTest.cpp
src/jai/: .gitignore  CMakeLists.txt  SharedJaiContext.cpp  SharedJaiContext.h  build.jai  byod_jai_lib.h  stb_sprintf.cpp
src/jai/krusher/: bit_reduction.jai  lofi_downsampler.jai
src/presets/: Preset.h  PresetComp.cpp  PresetComp.h  PresetCompItem.h  PresetManager.cpp  PresetManager.h  PresetsLNF.h
src/processors/: BaseProcessor.cpp  BaseProcessor.h  BufferHelpers.h  DryWetProcessor.cpp  DryWetProcessor.h  JuceProcWrapper.h  ParameterHelpers.h  PlayheadHelpers.h  ProcessorChain.cpp  ProcessorChain.h  ProcessorChainActions.cpp  ProcessorChainActions.h  ProcessorStore.cpp  ProcessorStore.h
src/processors/chain/: ChainIOProcessor.cpp  ChainIOProcessor.h  DryWetProcessor.cpp  DryWetProcessor.h  ProcessorChain.cpp  ProcessorChain.h  ProcessorChainActionHelper.cpp  ProcessorChainActionHelper.h  ProcessorChainActions.cpp  ProcessorChainActions.h  ProcessorChainPortMagnitudesHelper.cpp  ProcessorChainPortMagnitudesHelper.h  ProcessorChainStateHelper.cpp  ProcessorChainStateHelper.h
src/processors/drive/: BassFace.cpp  BassFace.h  BlondeDrive.cpp  BlondeDrive.h  DiodeClipper.cpp  DiodeClipper.h  DiodeClipperWDF.h  DiodeRectifier.cpp  DiodeRectifier.h  GuitarMLAmp.cpp  GuitarMLAmp.h  MetalFace.cpp  MetalFace.h  RONN.cpp  RONN.h  RangeBooster.cpp  RangeBooster.h  TanhDrive.h  Warp.cpp  Warp.h
src/processors/modulation/: Chorus.cpp  Chorus.h  CleanDelayType.h  Flanger.cpp  Flanger.h  FrequencyShifter.cpp  FrequencyShifter.h  MIDIModulator.cpp  MIDIModulator.h  Panner.cpp  Panner.h  ParamModulator.cpp  ParamModulator.h  Rotary.cpp  Rotary.h  Tremolo.cpp  Tremolo.h
src/processors/netlist_helpers/: CircuitQuantity.cpp  CircuitQuantity.h  NetlistViewer.cpp  NetlistViewer.h
src/processors/other/: Chorus.cpp  Chorus.h  Compressor.cpp  Compressor.h  Delay.cpp  Delay.h  EnvelopeFilter.cpp  EnvelopeFilter.h  FrequencyShifter.cpp  FrequencyShifter.h  Gate.cpp  Gate.h  LevelDetective.cpp  LevelDetective.h  Octaver.cpp  Octaver.h  PolyOctave.cpp  PolyOctave.h  Rotary.cpp  Rotary.h  ShimmerReverb.cpp  ShimmerReverb.h  SmoothReverb.cpp  SmoothReverb.h  Tremolo.cpp  Tremolo.h
src/processors/tone/: AmpIRs.cpp  AmpIRs.h  BassCleaner.cpp  BassCleaner.h  BigMuffTone.cpp  BigMuffTone.h  BlondeTone.cpp  BlondeTone.h  GraphicEQ.cpp  GraphicEQ.h  HighCut.cpp  HighCut.h  LofiIrs.cpp  LofiIrs.h  StateVariableFilter.cpp  StateVariableFilter.h  TrebleBooster.cpp  TrebleBooster.h
src/processors/utility/: CleanGain.cpp  CleanGain.h  DCBias.h  DCBlocker.h  FreqBandSplitter.cpp  FreqBandSplitter.h  InputProcessor.cpp  InputProcessor.h  Mixer.cpp  Mixer.h  Oscilloscope.cpp  Oscilloscope.h  OutputProcessor.cpp  OutputProcessor.h  Panner.cpp  Panner.h  StereoMerger.cpp  StereoMerger.h  StereoSplitter.cpp  StereoSplitter.h  Tuner.cpp  Tuner.h
src/state/: ParamForwardManager.cpp  ParamForwardManager.h  PresetManager.cpp  StateManager.cpp  StateManager.h  UIState.cpp  UIState.h
src/state/presets/: PresetDiscovery.cpp  PresetDiscovery.h  PresetInfoHelpers.cpp  PresetInfoHelpers.h  PresetManager.cpp  PresetManager.h  PresetsServerCommunication.cpp  (+6 more)
(+333 files in other folders)
